--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -20,3 +20,5 @@
   <app-chart-volume *ngIf="flag" fxFlex="20" class="lauren"></app-chart-volume>
   <app-ohlc *ngIf="flag" fxFlex="20"></app-ohlc>
 </div>
+
+<app-flask-side></app-flask-side>
